--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "pydantic>=2.11.7",
+    "pydantic-ai>=0.3.1",
+]
 
 [dependency-groups]
 dev = [
+    "mypy>=1.16.1",
     "pytype>=2024.10.11",
     "ruff>=0.12.0",
 ]
